# vehicle-launch-slack-agent

./: .gitignore  COVERAGE_IMPROVEMENT_SUMMARY.md  CREDENTIALS_QUICK_REFERENCE.md  Dockerfile  FINAL_COVERAGE_REPORT.md  README.md  SECURITY_FIXES.md  SETUP_GUIDE.md  TEST_RESULTS.md  TEST_RESULTS_COMPREHENSIVE.md  config.py  database.py  databricks_client.py  deploy.sh  docker-compose.yml  env_template.txt  file_parser.py  google_sheets_dashboard.py  init.sql  monitoring.py  openai_client.py  production_config.py  production_slack_bot.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_production.txt  run_tests.py  slack_bot.py  start_bot.py
.github/workflows/: auto-merge.yml  ci-cd.yml  codeql-analysis.yml  dependency-review.yml
tests/: __init__.py  test_80_percent_coverage.py  test_80_percent_coverage_final.py  test_80_percent_coverage_final_comprehensive.py  test_80_percent_coverage_focused.py  test_80_percent_coverage_simple.py  test_80_percent_coverage_simple_final.py  test_80_percent_coverage_targeted.py  test_basic.py  test_comprehensive.py  test_coverage_improvement.py  test_database.py  test_database_comprehensive.py  test_database_comprehensive_80.py  test_databricks_client.py  test_databricks_client_comprehensive.py  test_file_parser.py  test_final_80_percent.py  test_final_coverage.py  test_google_sheets_dashboard.py  test_google_sheets_dashboard_comprehensive.py  test_monitoring.py  test_monitoring_comprehensive.py  test_monitoring_comprehensive_80.py  test_openai_client.py  test_production_config_coverage.py  test_production_slack_bot.py  test_production_slack_bot_comprehensive.py  test_production_slack_bot_comprehensive_80.py  test_production_slack_bot_coverage.py  test_slack_bot.py  test_slack_bot_comprehensive.py  test_start_bot.py  test_start_bot_coverage.py
